<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/leaderboard_linear_layout"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_search_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/player_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toStartOf="@+id/leaderboard_filter_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:queryHint="@string/search_for_player" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/leaderboard_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/settings_btn_desc"
            android:focusable="true"
            app:backgroundTint="@android:color/white"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/player_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/player_search"
            app:srcCompat="@drawable/filter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/leaderboard_navigation"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_search_wrapper"
        app:tabIndicatorColor="@color/teal_700"
        app:tabInlineLabel="true"
        app:tabSelectedTextColor="@color/teal_700"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:tabTextColor="@color/teal_700" />

    <ListView
        android:id="@+id/leaderboard_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_navigation">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>