...
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/leaderboard_entry_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Text"
        android:gravity="center_vertical"
        android:paddingStart="20sp"
        android:textSize="18sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/leaderboard_entry_score"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="Score"
        android:gravity="center_vertical"
        android:paddingEnd="10sp"
        android:textSize="18sp"
...
