<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:exported="true"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/leaderboard_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="Text"
        android:textAlignment="center"
        android:textSize="35sp"
        android:ellipsize="end"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:maxLines="1"
        android:layout_weight="1" />

</LinearLayout>